Your First Flexbox

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <title>Flexbox & CSS Grid</title>
 </head>
 <body>
-    
+    <nav>
+        <div>HOME</div>
+        <div>ABOUT</div>
+        <div>WIDGETS</div>
+        <div>LOG</div>
+    </nav>
 </body>
 </html>
