--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="js/script.js">
+    <script defer src="js/script.js"></script>
     <title>Flexbox & CSS Grid</title>
 </head>
 <body>
@@ -14,5 +14,11 @@
         <div>WIDGETS</div>
         <div>LOG</div>
     </nav>
+
+    <aside>SIDE BAR</aside>
+    
+    <main>MAIN CONTENT</main>
+    
+    <footer>FOOTER</footer>
 </body>
 </html>
